--- a/MakeFile
+++ b/MakeFile
@@ -1,1 +1,3 @@
-docker run --rm  -v "$PWD":/home/workspace -w /home/workspace golang:1.20 go build /cmd/spider
+docker run --name bilbilBuildSpider -v C:\Code\GO\videoDynamicSpider:/home/workspace -w /home/workspace go1.20by-ubunto20.04 go build ./cmd/spider
+docker run --name bilbilBuildWeb -v C:\Code\GO\videoDynamicSpider:/home/workspace -w /home/workspace go1.20by-ubunto20.04 go build ./cmd/webServer
+
