--- a/MakeFile
+++ b/MakeFile
@@ -10,10 +10,14 @@ docker run --name bilbilSpider -v /volume4/Download/bilbilSpider:/home/workspace
 
 docker run --name mysqlXtrabackup --volumes-from mysqllable percona/percona-xtrabackup:8.2.0 xtrabackup --backup --data-dir=/var/lib/mysql --target-dir=/etc/backup --user=root --password=p0o9i8u7
 
-# 脚本备份
-docker run -u 999:999 --name percona-xtrabackup --volumes-from mysqllable -v C:\mysql-xtrabackup\shellScript:/shellScript percona/percona-xtrabackup:8.2.0 sh /shellScript/mysqlBackup.sh
-# 脚本还原
-docker run -u 999:999 --name restoreMysql --volumes-from testRestore -v C:\mysql-xtrabackup\shellScript:/shellScript percona/percona-xtrabackup:8.2.0 sh /shellScript/mysqlRestore.sh
+# windows备份
+docker run -u 999:999 --name mysqlBackup --volumes-from mysql -v C:\mysql-docker_restore_test\shellScript:/shellScript percona/percona-xtrabackup:8.2.0 sh /shellScript/mysqlBackup.sh
+# windows还原
+docker run -u 999:999 --name mysqlRestore --volumes-from mysql -v C:\mysql-docker_restore_test\shellScript:/shellScript percona/percona-xtrabackup:8.2.0 sh /shellScript/mysqlRestore.sh
+# nas还原
+docker run -u 999:999 --name restoreMysql --volumes-from mysql-lable -v /volume4/Download/mysql-docker/shellScript:/shellScript percona/percona-xtrabackup:8.2.0 sh /shellScript/mysqlRestore.sh
+# nas备份
+docker run -u 999:999 --name backupMysql --volumes-from mysql-lable -v /volume4/Download/mysql-docker/shellScript:/shellScript percona/percona-xtrabackup:8.2.0 sh /shellScript/mysqlBackup.sh
 
 docker run -u 999:999 --name shunwang --volumes-from mysqllable percona/percona-xtrabackup:8.2.0  xtrabackup xtrabackup --user=root --password=p0o9i8u7 --backup --stream=xbstream --compress | gzip -2  > /etc/backup/videoSpider.xbstream.gz
 
